# learnning_conclusion

./: README.md
ci_cd/: CICD环境搭建记录.md  dns.rar  个人CICD环境搭建.md
cmake/hello_cuda/: CMakeLists.txt
cmake/hello_cuda/include/: say_hello.cuh
cmake/hello_cuda/src/: main.cu  say_hello.cu
cmake/hello_ffmpeg/: CMakeLists.txt
cmake/hello_ffmpeg/cmake-modules/: FindFFmpeg.cmake  FindFFmpeg.cmake_1
cmake/hello_hpsocket/: CMakeLists.txt
cmake/hello_hpsocket/include/global/: helper.cpp  helper.h
cmake/hello_hpsocket/include/server/: TcpServer.h
cmake/hello_hpsocket/src/common/: helper.cpp
cmake/hello_hpsocket/src/server/: TcpServer.cpp  server.cpp
cmake/hello_world/: CMakeLists.txt
cmake/hello_world/include/: hello_world.h
cmake/hello_world/src/: hello_world.cpp  main.cpp
docker/harbor/: harbor.cfg  harbor.md
kubernetes/: K8S部署.md  local.repo  pull_k8s_images.sh
linux/tools/bind9/Docker/: Dockerfile  bind9_setup.sh
linux/tools/bind9/主备/bind/: named.conf.local  named.conf.options  rndc.key
linux/tools/bind9/主备/bind/zones-gitlab/: ptr.gitlab.juno.com  zone.gitlab.juno.com
linux/tools/dnsmasq/: dnsmasq.md  dnsmasqhosts  docker-compose.yaml  resolv.dnsmasq
linux/tools/keepalived/ready/master/: check_named.sh  keepalived.conf
linux/tools/keepalived/ready/slave/: keepalived.conf
